@@ -1,4 +1,5 @@
 Development
+    Work on fixing fullscreen mode hanging when control menu goes thru show/hide sequence
     Prevent window from going fullscreen on startup when embedded
     Tracker size adjustments so that it does not look wrong in gecko-mediaplayer
     Set audio and subtitle language to English by default if not specified in configuration
